package Items.Interfaces;

public interface Openable {
    public void open();
    public boolean isOpen();
}
