package Items.Interfaces;

public interface Usable {
    public boolean use();
}
