package Items;

import Items.Abstactions.Item;
import Items.Abstactions.ItemOpenable;
import Items.Interfaces.Openable;

public class Wardrobe extends ItemOpenable {
    public Wardrobe() {
        super("Шкаф");
    }
}
