package Places;

public class Room extends Place {
    public Room(){
        super("Комната");
    }
}
