package Places;

public class School extends Place {
    public School(int number){
        super("Школа №" + number);
    }
}
