package Places;

public class Street extends Place {
    public Street(String name) {
        super("Улица " + name);
    }
}
